version/stable/_sources/api/ansys/mechanical/stubs/v242/Ansys/ACT/Mechanical/Application/SolveProcessSettings/SolverMemorySettings.rst.txt
.. vale off



:class:`SolverMemorySettings`
=============================

.. py:class:: ansys.mechanical.stubs.v242.Ansys.ACT.Mechanical.Application.SolveProcessSettings.SolverMemorySettings

   Bases: :py:obj:`object`


   
   The class representing the solver memory settings portion of the solve process settings.
















   ..
       !! processed by numpydoc !!


.. py:currentmodule:: SolverMemorySettings

Overview
--------

.. tab-set::



   .. tab-item:: Methods

      .. list-table::
          :header-rows: 0
          :widths: auto

          * - :py:attr:`~CopyTo`
            - CopyTo method.


   .. tab-item:: Properties

      .. list-table::
          :header-rows: 0
          :widths: auto

          * - :py:attr:`~Active`
            - Whether the solver memory settings are active.
          * - :py:attr:`~Database`
            - Database size.
          * - :py:attr:`~Workspace`
            - Workspace size.







Property detail
---------------
.. py:property:: Active
   :type: Optional[bool]


   
   Whether the solver memory settings are active.
















   ..
       !! processed by numpydoc !!

.. py:property:: Database
   :type: Optional[int]


   
   Database size.
















   ..
       !! processed by numpydoc !!

.. py:property:: Workspace
   :type: Optional[int]


   
   Workspace size.
















   ..
       !! processed by numpydoc !!





Method detail
-------------
.. py:method:: CopyTo(other: Ansys.ACT.Mechanical.Application.SolveProcessSettings.ISolverMemorySettings) -> None

   
   CopyTo method.

   ..
       !! processed by numpydoc !!



.. vale on